gze/gze-upfiles-prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gze-upfiles-prod-deploy
spec:
  selector:
    matchLabels:
      app: gze-upfiles-prod-deploy
  template:
    metadata:
      labels:
        app: gze-upfiles-prod-deploy
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3408"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: gze-upfiles-prod-deploy
          image: ldamasio/gze-upfiles:latest
          ports:
          - containerPort: 3408
