gze/gze-upfiles-prod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gze-upfiles-prod-ingress
spec:
  rules:
  - host: upload.garagemdoze-lts.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gze-upfiles-prod-svc
            port:
              number: 80
